Add multiquestions for team capabilities
Each capability should be edited on a separate page, so capability
questions are wrapped with a multiquestion that can be rendered as
section.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -20,16 +20,17 @@
     - manageIncentives
 
 - name: Team capabilities
-  editable: True
+  editable: False
+  edit_questions: True
   questions:
-    - performanceAnalysisTypes
-    - securityTypes
-    - deliveryTypes
-    - softwareDevelopmentTypes
-    - supportAndOperationsTypes
-    - testingAndAuditingTypes
-    - userExperienceAndDesignTypes
-    - userResearchTypes
+    - performanceAnalysis
+    - security
+    - delivery
+    - softwareDevelopment
+    - supportAndOperations
+    - testingAndAuditing
+    - userExperienceAndDesign
+    - userResearch
 
 - name: Outcomes locations
   editable: true
