--- a/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
@@ -14,3 +14,7 @@ options:
   - label: Systems administration
   - label: Technical service desk
   - label: Tooling (continuous integration / deployment tools)
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
