--- a/frameworks/digital-outcomes-and-specialists/questions/services/userExperienceAndDesignTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/userExperienceAndDesignTypes.yml
@@ -14,3 +14,7 @@ options:
   - label: Prototyping
   - label: Service design
   - label: User experience and design strategy
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
