--- a/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalysisTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalysisTypes.yml
@@ -13,3 +13,7 @@ options:
   - label: Performance reporting
   - label: Statistical modelling
   - label: Web analytics
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
