Add answer_required messages to individual specialist questions
Even though the questions are optional, API should return an error
if only one of the questions was answered when the page was edited.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: agileCoachPriceMin
   maximum_price: agileCoachPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
