--- a/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalystDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalystDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: businessAnalystPriceMin
   maximum_price: businessAnalystPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
