--- a/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManagerDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: deliveryManagerPriceMin
   maximum_price: deliveryManagerPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
