--- a/frameworks/digital-outcomes-and-specialists/questions/services/designerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/designerDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: designerPriceMin
   maximum_price: designerPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
