--- a/frameworks/digital-outcomes-and-specialists/questions/services/developerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/developerDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: developerPriceMin
   maximum_price: developerPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
