--- a/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalystDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalystDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: performanceAnalystPriceMin
   maximum_price: performanceAnalystPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
