--- a/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: portfolioManagerPriceMin
   maximum_price: portfolioManagerPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
