--- a/frameworks/digital-outcomes-and-specialists/questions/services/productManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/productManagerDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: productManagerPriceMin
   maximum_price: productManagerPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
