--- a/frameworks/digital-outcomes-and-specialists/questions/services/programmeManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/programmeManagerDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: programmeManagerPriceMin
   maximum_price: programmeManagerPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
