--- a/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: securityConsultantPriceMin
   maximum_price: securityConsultantPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
