--- a/frameworks/digital-outcomes-and-specialists/questions/services/technicalArchitectDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/technicalArchitectDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: technicalArchitectPriceMin
   maximum_price: technicalArchitectPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
