--- a/frameworks/digital-outcomes-and-specialists/questions/services/technicalArchitectLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/technicalArchitectLocations.yml
@@ -17,3 +17,7 @@ options:
   - label: "South East England"
   - label: "West England"
   - label: "Northern Ireland"
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
