--- a/frameworks/digital-outcomes-and-specialists/questions/services/userResearcherDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/userResearcherDayRate.yml
@@ -7,3 +7,7 @@ type: pricing
 fields:
   minimum_price: userResearcherPriceMin
   maximum_price: userResearcherPriceMax
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
