--- a/frameworks/g-cloud-7/questions/services/priceString.yml
+++ b/frameworks/g-cloud-7/questions/services/priceString.yml
@@ -11,24 +11,31 @@ depends:
       - iaas
       - SCS
       - scs
+type: pricing
+question: 'Service price'
+fields:
+  minimum_price: priceMin
+  maximum_price: priceMax
+  price_unit: priceUnit
+  price_interval: priceInterval
 validations:
   -
-    name: no_min_price_specified
+    name: answer_required
+    field: priceMin
     message: 'Minimum price requires an answer.'
   -
-    name: no_unit_specified
+    name: answer_required
+    field: priceUnit
     message: 'Pricing unit requires an answer. If none of the provided units apply, please choose ''Unit''.'
   -
-    name: min_price_not_a_number
+    name: not_a_number
+    field: priceMin
     message: 'Minimum price must be a number, without units, eg 99.95'
   -
-    name: max_price_not_a_number
+    name: not_a_number
+    field: priceMax
     message: 'Maximum price must be a number, without units, eg 99.95'
   -
     name: max_less_than_min
+    field: priceMax
     message: 'Minimum price must be less than maximum price'
-  -
-    name: price_string_can_be_composed
-    message: 'An error has occured'
-type: pricing
-question: 'Service price'
