Add optional_fields key for pricing fields
Sometimes some of the pricing fields are optional. This change adds
another top level key for listing any fields which are optional. This is
not the ideal solution but it is the quickest solution right now.

--- a/frameworks/g-cloud-6/questions/services/priceString.yml
+++ b/frameworks/g-cloud-6/questions/services/priceString.yml
@@ -18,6 +18,8 @@ fields:
   maximum_price: priceMax
   price_unit: priceUnit
   price_interval: priceInterval
+optional_fields:
+  - maximum_price
 validations:
   -
     name: answer_required
