--- a/frameworks/g-cloud-6/questions/services/priceString.yml
+++ b/frameworks/g-cloud-6/questions/services/priceString.yml
@@ -20,6 +20,7 @@ fields:
   price_interval: priceInterval
 optional_fields:
   - maximum_price
+  - price_interval
 validations:
   -
     name: answer_required
