Add field defaults for DOS specialists
It is assumed that DOS specialists are charged per person per day but
there was not conveyed in the content. This change allows defaults to be
set for unit and interval.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerDayRate.yml
@@ -7,6 +7,9 @@ type: pricing
 fields:
   minimum_price: portfolioManagerPriceMin
   maximum_price: portfolioManagerPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
 
 validations:
   - name: answer_required
