--- a/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManagerDayRate.yml
@@ -7,6 +7,9 @@ type: pricing
 fields:
   minimum_price: deliveryManagerPriceMin
   maximum_price: deliveryManagerPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
 
 validations:
   - name: answer_required
