--- a/frameworks/digital-outcomes-and-specialists/questions/services/userResearcherDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/userResearcherDayRate.yml
@@ -7,6 +7,9 @@ type: pricing
 fields:
   minimum_price: userResearcherPriceMin
   maximum_price: userResearcherPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
 
 validations:
   - name: answer_required
