--- a/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalystDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalystDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: businessAnalystPriceMin
   maximum_price: businessAnalystPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
