--- a/frameworks/digital-outcomes-and-specialists/questions/services/contentDesignerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/contentDesignerDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: contentDesignerPriceMin
   maximum_price: contentDesignerPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
