--- a/frameworks/digital-outcomes-and-specialists/questions/services/developerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/developerDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: developerPriceMin
   maximum_price: developerPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
