--- a/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalystDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalystDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: performanceAnalystPriceMin
   maximum_price: performanceAnalystPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
