--- a/frameworks/digital-outcomes-and-specialists/questions/services/productManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/productManagerDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: productManagerPriceMin
   maximum_price: productManagerPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
