--- a/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssuranceDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssuranceDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: qualityAssurancePriceMin
   maximum_price: qualityAssurancePriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
