--- a/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: securityConsultantPriceMin
   maximum_price: securityConsultantPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
