--- a/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
@@ -7,3 +7,6 @@ type: pricing
 fields:
   minimum_price: webOperationsPriceMin
   maximum_price: webOperationsPriceMax
+field_defaults:
+  price_unit: Person
+  price_interval: Day
