--- a/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
@@ -12,5 +12,5 @@ options:
   - label: Monitoring
   - label: Network administration
   - label: Systems administration
-  - label: Technical service desk
-  - label: Tooling (continuous integration / deployment tools)
+  - label: IT service desk
+  - label: Tooling
