--- a/frameworks/digital-outcomes-and-specialists/questions/services/testingAndAuditingTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/testingAndAuditingTypes.yml
@@ -6,9 +6,9 @@ depends:
 type: checkboxes
 options:
   - label: Accessibility testing
-  - label: Application testing (Automated/Exploratory)
+  - label: Application testing
   - label: Data auditing
-  - label: Load/Performance testing
+  - label: Load and performance testing
   - label: Process auditing
   - label: Software auditing
   - label: System auditing
