Added 'Accessibility' and replaced the slashes with 'ands', and removed capital letters and things in brackets.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
@@ -12,8 +12,8 @@ options:
   - label: Monitoring
   - label: Network administration
   - label: Systems administration
-  - label: Technical service desk
-  - label: Tooling (continuous integration / deployment tools)
+  - label: IT service desk
+  - label: Tooling
 
 validations:
   - name: answer_required
