put Digital communication and engagement back in

--- a/frameworks/digital-outcomes-and-specialists/questions/services/deliveryTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/deliveryTypes.yml
@@ -8,7 +8,7 @@ options:
   - label: Agile coaching and training
   - label: Agile delivery
   - label: Business analysis
-  - label: Agile coaching and training
+  - label: Digital communication and engagement
   - label: Product management
   - label: Programme management
   - label: Project management
