removed 'IT' from 'IT service desk

--- a/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/supportAndOperationsTypes.yml
@@ -12,5 +12,5 @@ options:
   - label: Monitoring
   - label: Network administration
   - label: Systems administration
-  - label: IT service desk
+  - label: Service desk
   - label: Tooling
