Update DOS price validations

--- a/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: agileCoachPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: agileCoachPriceMax
     message: 'You need to answer this question.'
