--- a/frameworks/digital-outcomes-and-specialists/questions/services/communicationsManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/communicationsManagerDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: communicationsManagerPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: communicationsManagerPriceMax
     message: 'You need to answer this question.'
