--- a/frameworks/digital-outcomes-and-specialists/questions/services/contentDesignerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/contentDesignerDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: contentDesignerPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: contentDesignerPriceMax
     message: 'You need to answer this question.'
