--- a/frameworks/digital-outcomes-and-specialists/questions/services/designerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/designerDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: designerPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: designerPriceMax
     message: 'You need to answer this question.'
