--- a/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: portfolioManagerPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: portfolioManagerPriceMax
     message: 'You need to answer this question.'
