--- a/frameworks/digital-outcomes-and-specialists/questions/services/programmeManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/programmeManagerDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: programmeManagerPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: programmeManagerPriceMax
     message: 'You need to answer this question.'
