--- a/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssuranceDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssuranceDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: qualityAssurancePriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: qualityAssurancePriceMax
     message: 'You need to answer this question.'
