--- a/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: securityConsultantPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: securityConsultantPriceMax
     message: 'You need to answer this question.'
