--- a/frameworks/digital-outcomes-and-specialists/questions/services/serviceManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/serviceManagerDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: serviceManagerPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: serviceManagerPriceMax
     message: 'You need to answer this question.'
