--- a/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
@@ -13,4 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
+    field: userResearcherPriceMin
+    message: 'You need to answer this question.'
+  - name: answer_required
+    field: userResearcherPriceMax
     message: 'You need to answer this question.'
