--- a/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachLocations.yml
@@ -5,6 +5,7 @@ depends:
       - digital-specialists
 type: checkboxes
 options:
+  - label: "Off-site"
   - label: "Scotland"
   - label: "North East England"
   - label: "North West England"
