--- a/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
@@ -13,8 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
-    field: userResearcherPriceMin
+    field: webOperationsPriceMin
     message: 'You need to answer this question.'
   - name: answer_required
-    field: userResearcherPriceMax
+    field: webOperationsPriceMax
     message: 'You need to answer this question.'
