--- a/frameworks/digital-outcomes-and-specialists/questions/services/helpGovernmentImproveServices.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/helpGovernmentImproveServices.yml
@@ -1,3 +1,4 @@
+name: Share non-personal data
 question: Will you share non-personal user and service data to help the government continuously improve its services?
 type: boolean
 depends:
