--- a/frameworks/digital-outcomes-and-specialists/questions/services/bespokeSystemInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/bespokeSystemInformation.yml
@@ -1,3 +1,4 @@
+name: Share systems information
 question: Will you share bespoke system information from the service you’re working on, eg software performance data, to help the government continuously improve its services?
 type: boolean
 depends:
