--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/requisiteAuthority.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/requisiteAuthority.yml
@@ -1,3 +1,3 @@
 question: >
-  Have you got all the approvals you need to compete in this procurement and sign the framework agreement?
+  Do you have the authority to apply for this framework on behalf of your organisation?
 type: boolean
