reworded lab price to lab not studio and labe size to accomodate researchers not facilitators

--- a/frameworks/digital-outcomes-and-specialists/questions/services/labPrice.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/labPrice.yml
@@ -1,4 +1,4 @@
-question: What is the minimum amount of time your studio can be booked for and how much does it cost?
+question: What is the minimum amount of time your lab can be booked for and how much does it cost?
 
 depends:
   - "on": lot
