Add defaults to labPrice
Without a default unit and a minimum price, pricing strings are
considered not to be fully answered.
Without a default unit, "Answer required" would always be shown in
the edit service overview page in the supplier app.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/labPrice.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/labPrice.yml
@@ -9,3 +9,6 @@ type: pricing
 fields:
   minimum_price: labPriceMin
   maximum_price: labPriceMax
+field_defaults:
+  price_unit: Lab
+  price_interval: Day
