--- a/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
@@ -14,7 +14,7 @@ coming:
       - user research studios
       - user research participants
 
-    [Create an account](https://www.digitalmarketplace.service.gov.uk/suppliers/create) to receive an email when Digital Outcomes and Specialists opens.
+    [Create an account](/suppliers/create) to receive an email when Digital Outcomes and Specialists opens.
 
 
     If you already have an account we’ll email you when Digital Outcomes and Specialists opens.
@@ -39,7 +39,7 @@ open:
       - user research studios
       - user research participants
 
-    [Create an account](https://www.digitalmarketplace.service.gov.uk/suppliers/create) or [log in](https://www.digitalmarketplace.service.gov.uk/suppliers/login) to apply.
+    [Create an account](/suppliers/create) or [log in](/suppliers/login) to apply.
 
 
     [Find out if your services are suitable](https://digitalmarketplace.blog.gov.uk/2015/11/12/digital-outcomes-and-specialists-suitable-suppliers-and-services/)
