--- a/frameworks/digital-outcomes-and-specialists/questions/services/serviceManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/serviceManagerDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: serviceManagerPriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: serviceManagerPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: serviceManagerPriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: serviceManagerPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: serviceManagerPriceMax
+    message: "Minimum price must be less than maximum price"
