--- a/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalystDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalystDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: businessAnalystPriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: businessAnalystPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: businessAnalystPriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: businessAnalystPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: businessAnalystPriceMax
+    message: "Minimum price must be less than maximum price"
