--- a/frameworks/digital-outcomes-and-specialists/questions/services/contentDesignerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/contentDesignerDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: contentDesignerPriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: contentDesignerPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: contentDesignerPriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: contentDesignerPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: contentDesignerPriceMax
+    message: "Minimum price must be less than maximum price"
