--- a/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManagerDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: deliveryManagerPriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: deliveryManagerPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: deliveryManagerPriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: deliveryManagerPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: deliveryManagerPriceMax
+    message: "Minimum price must be less than maximum price"
