--- a/frameworks/digital-outcomes-and-specialists/questions/services/productManagerDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/productManagerDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: productManagerPriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: productManagerPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: productManagerPriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: productManagerPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: productManagerPriceMax
+    message: "Minimum price must be less than maximum price"
