--- a/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssuranceDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssuranceDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: qualityAssurancePriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: qualityAssurancePriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: qualityAssurancePriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: qualityAssurancePriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: qualityAssurancePriceMax
+    message: "Minimum price must be less than maximum price"
