--- a/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: securityConsultantPriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: securityConsultantPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: securityConsultantPriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: securityConsultantPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: securityConsultantPriceMax
+    message: "Minimum price must be less than maximum price"
