--- a/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/webOperationsDayRate.yml
@@ -15,6 +15,15 @@ validations:
   - name: answer_required
     field: webOperationsPriceMin
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: webOperationsPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
   - name: answer_required
     field: webOperationsPriceMax
     message: 'You need to answer this question.'
+  - name: not_money_format
+    field: webOperationsPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: webOperationsPriceMax
+    message: "Minimum price must be less than maximum price"
