Add Quality Assurance to specialist manifest

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -52,6 +52,7 @@
     - portfolioManager
     - productManager
     - programmeManager
+    - qualityAssurance
     - serviceManager
     - technicalArchitect
     - userResearcher
