removed 'surverys, fixed short name of dataProtocols and fixed hint on lab name

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -64,7 +64,7 @@
     - userResearcher
     - webOperations
 
-- name: Address
+- name: Lab address
   editable: True
   questions:
     - labAddressBuilding
