mlnor content improvements

--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -5,6 +5,10 @@
     You must make this declaration to apply to Digital Outcomes and
     Specialists. You can come back and change your answers at any time before
     3pm, 19 January 2016.
+
+    You must be able to truthfully answer 'yes' to every question under ‘Essentials' 
+    for your bid to be considered eligible. If you can't answer 'yes' to every 
+    question in this section, it's very unlikely that your bid will be accepted.
   questions:
     - termsOfParticipation
     - termsAndConditions
