--- a/frameworks/digital-outcomes-and-specialists/questions/services/labCarPark.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/labCarPark.yml
@@ -1,8 +1,4 @@
-name: Where can visitors to your studio park?
-question: >
-  Where can visitors to your studio park?
-
-  This is to help buyers understand how easy it is for them to reach your studio.
+question: Where can visitors to your studio park?
 depends:
   - "on": lot
     being:
