--- a/frameworks/digital-outcomes-and-specialists/questions/services/labEyeTracking.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/labEyeTracking.yml
@@ -7,9 +7,9 @@ depends:
 
 type: radios
 options:
-  - label: "No"
   - label: Yes – included as standard
   - label: Yes – for an additional cost
+  - label: No
 
 validations:
   - name: answer_required
