Make all date fields required

--- a/frameworks/g-cloud-6/messages/dates.yml
+++ b/frameworks/g-cloud-6/messages/dates.yml
@@ -1,4 +1,5 @@
 clarifications_close_date: ""
 clarifications_publish_date: ""
 framework_close_date: ""
+intention_to_award_date: ""
 framework_live_date: ""
