Quote No labels
YAML understands No as boolean false therefore we need to quote it to
explicitly tell the YAML parser that it's a string.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/labDesktopStreaming.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/labDesktopStreaming.yml
@@ -9,7 +9,7 @@ type: radios
 options:
   - label: Yes – included as standard
   - label: Yes – for an additional cost
-  - label: No
+  - label: "No"
 
 validations:
   - name: answer_required
