--- a/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
@@ -1,5 +1,5 @@
 question: Where can you recruit participants from?
-hint: [View regions](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)
+hint: "[View regions](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 depends:
   - "on": lot
     being:
